Added video & image on banner

--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -1,5 +1,7 @@
+@import "~video-react/styles/scss/video-react";
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,700');
 @import url('Jumbotron.scss');
+@import url('Video.scss');
 
 * {
   font-family: 'Work Sans';
