--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,700');
 @import url('Jumbotron.scss');
 @import url('Video.scss');
+@import url('Image.scss');
+
 
 * {
   font-family: 'Work Sans';
