Added HeroBanner background Added MediaList

--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -3,6 +3,9 @@
 @import url('Jumbotron.scss');
 @import url('Video.scss');
 @import url('Image.scss');
+@import url('HeroBanner.scss');
+@import url('Media.scss');
+
 
 
 * {
