--- a/styles/HeroBanner.scss
+++ b/styles/HeroBanner.scss
@@ -2,7 +2,7 @@
   background-size: cover;
 
   &.parallax {
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
