--- a/styles/Media.scss
+++ b/styles/Media.scss
@@ -12,12 +12,31 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    border-radius: 7px;
+    -webkit-box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.2);
+    background-color: white;
+
+    &.overlap-top {
+      margin-top: -5em;
+    }
 
     & > li.media {
-      width: 25%;
       flex-wrap: wrap;
+      flex-direction: column;
+      flex-grow: 1;
+      flex-basis: 0;
       padding: 30px;
-      justify-content: center;
+
+      .media-body {
+        .media-heading {
+          font-size: 18px;
+        }
+        p {
+          color: #999;
+          font-size: 15px;
+        }
+      }
     }
   }
 }
