--- a/styles/Media.scss
+++ b/styles/Media.scss
@@ -19,6 +19,48 @@
 
     &.overlap-top {
       margin-top: -5em;
+
+      @media (max-width: 768px) {
+        margin-top: -2em;
+      }
+    }
+
+    &.no-border {
+      border: none;
+      box-shadow: none;
+      border-radius: 0;
+    }
+
+    &.center-items {
+      & > li.media {
+        align-items: center;
+        text-align: center;
+      }
+    }
+
+    &.transparent {
+      background-color: transparent;
+    }
+
+    &.row-max-3 {
+      & > li.media {
+        flex-grow: 0;
+        flex-basis: 33%;
+      }
+    }
+
+    &.row-max-4 {
+      & > li.media {
+        flex-grow: 0;
+        flex-basis: 25%;
+      }
+    }
+
+    &.row-max-5 {
+      & > li.media {
+        flex-grow: 0;
+        flex-basis: 20%;
+      }
     }
 
     & > li.media {
@@ -36,6 +78,11 @@
           color: #999;
           font-size: 15px;
         }
+      }
+
+      .price {
+        font-size: 60px;
+        color: #4b4343;
       }
     }
   }
