--- a/styles/Carousel.scss
+++ b/styles/Carousel.scss
@@ -1,25 +1,14 @@
 .carousel {
-  .carousel-indicators {
-    li {
-      height: 10px;
-      width: 10px;
-      border-radius: 50%;
-      margin: 0 10px;
-    }
-  }
+  .slick-slide {
+    & > div {
+      div {
+        max-height: 500px;
+        overflow: hidden;
 
-  .carousel-control-prev-icon,
-  .carousel-control-next-icon {
-    border-radius: 50%;
-    background-size: 30% 30%;
-    background-color: rgba(0,0,0,0.5);
-    padding: 20px;
-  }
-
-  .carousel-inner {
-    .carousel-item {
-      max-height: 700px;
-      overflow: hidden;
+        img {
+          width: 100%;
+        }
+      }
     }
   }
 }
