Added PostCollection component

--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -10,6 +10,7 @@
 @import url('Carousel.scss');
 @import url('SplitColumnBlock.scss');
 @import url('Testimonials.scss');
+@import url('PostCollection.scss');
 
 
 * {
