--- a/styles/Media.scss
+++ b/styles/Media.scss
@@ -73,6 +73,7 @@
       .media-body {
         .media-heading {
           font-size: 18px;
+          text-transform: uppercase;
         }
         p {
           color: #999;
