--- a/styles/HeroBanner.scss
+++ b/styles/HeroBanner.scss
@@ -23,4 +23,48 @@
   .hero-banner {
     min-height: 700px;
   }
+
+  .hero-banner-title {
+    font-weight: 700;
+    font-size: 5rem;
+    font-family: 'HK Grotesk';
+    line-height: 1;
+  }
+
+  .hero-banner-description {
+    color: #303030;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    white-space: nowrap;
+
+    .description {
+      display: flex;
+      margin-bottom: 15px;
+
+      .highlight {
+        padding: 0 0.25em;
+      }
+    }
+
+    .categories {
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+
+      svg {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  .btn {
+    background-color: #6a2e35;
+    border-color: #6a2e35;
+
+    &:hover {
+      background-color: #803941;
+      border-color: #803941;
+    }
+  }
 }
